# haskell-tree-sitter-tlaplus

./: .gitmodules  tree-sitter-tlaplus.cabal
src/TreeSitter/: TlaPlus.hs
