cabal-version:       2.2
name:                tree-sitter-tlaplus
version:             0.1.0
synopsis:            Tree-sitter parser for TLA+
description:         Bindings for tree-sitter TLA+ parser.
license:             MIT
homepage:            https://github.com/jorpic/tree-sitter-tlaplus
author:              Max Taldykin
maintainer:          jorpic@gmail.com
copyright:           2023 Max Taldykin
category:            Tree-sitter, TLA+
build-type:          Simple
data-files:          vendor/src/node-types.json
                   , vendor/test/corpus/*.txt
                   , vendor/test/corpus/pluscal/*.txt

common common
  default-language: Haskell2010
  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missed-specialisations
    -Wno-missing-import-lists
    -Wno-missing-local-signatures
    -Wno-monomorphism-restriction
    -Wno-name-shadowing
    -Wno-safe
    -Wno-unsafe

library
  import: common
  exposed-modules:     TreeSitter.TlaPlus
  autogen-modules:     Paths_tree_sitter_tlaplus
  other-modules:       Paths_tree_sitter_tlaplus
  build-depends:       base >= 4.12 && < 5
                     , tree-sitter ^>= 0.10
  hs-source-dirs:      src
  Include-dirs:        vendor/src
  install-includes:    tree_sitter/parser.h
  c-sources:           vendor/src/parser.c
                     , vendor/src/scanner.cc
  extra-libraries:     stdc++
